--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 
 html, body {
     height: 100vh;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -119,6 +120,7 @@ body {
     display: flex;
     height: calc(100vh - 60px);
     overflow: hidden;
+    margin: 0 50px;
 }
 
 .container {
